RESOLVED FIXED79049
Regression (108135) isOpaque() returns uninitialized variable.
https://bugs.webkit.org/show_bug.cgi?id=79049
Summary Regression (108135) isOpaque() returns uninitialized variable.
Yael
Reported 2012-02-20 15:19:17 PST
r108135 replaced m_isOpaque with some new m_flags, but isOpaque is still used in some parts of the code. Patch is coming soon.
Attachments
Patch (1.95 KB, patch)
2012-02-20 15:40 PST, Yael
noam: review+
noam: commit-queue-
Patch for landing. (1.92 KB, patch)
2012-02-20 17:10 PST, Yael
no flags
Yael
Comment 1 2012-02-20 15:40:32 PST
Noam Rosenthal
Comment 2 2012-02-20 15:48:42 PST
Comment on attachment 127862 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127862&action=review > Source/WebCore/ChangeLog:9 > + No new tests. Tests are not enabled yet for texture mapper code. Just say "No new functionality".
Yael
Comment 3 2012-02-20 17:10:18 PST
Created attachment 127872 [details] Patch for landing.
WebKit Review Bot
Comment 4 2012-02-20 17:33:25 PST
Comment on attachment 127872 [details] Patch for landing. Clearing flags on attachment: 127872 Committed r108276: <http://trac.webkit.org/changeset/108276>
WebKit Review Bot
Comment 5 2012-02-20 17:33:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.