Regression (108135) isOpaque() returns uninitialized variable. https://bugs.webkit.org/show_bug.cgi?id=79049

Reviewed by Noam Rosenthal.

isOpaque() should use the new m_flags instead of the old m_isOpaque.
No new tests. No new functionality.

* platform/graphics/texmap/TextureMapper.h:
(WebCore::BitmapTexture::reset):
(WebCore::BitmapTexture::isOpaque):
(BitmapTexture):


Canonical link: https://commits.webkit.org/96093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108276 268f45cc-cd09-0410-ab3c-d52691b4dbfc